apps/base/uptime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
  labels:
    app: uptime
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: uptime
