apps/base/uptime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  labels:
    app: uptime
spec:
  ingressClassName: traefik
  rules:
  - host: uptime.sotools.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime
            port:
              number: 80
